# maggma

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  genindex.html  index.html  install-mpi.sh  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  requirements-optional.txt  requirements-testing.txt  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  tasks.py  test.json
.dependabot/: config.yml
.github/: .dependabot.yml  dependabot.yml  pull_request_template.md
.github/workflows/: changelog.yml  codeql.yml  docs.yml  linting.yml  post-process.yml  release.yml  testing.yml  upgrade-dependencies.yml
CHANGELOG/: index.html
apidoc/: index.html
concepts/: index.html
dev_scripts/: mpi_collective_communication.py
docs/: CHANGELOG.md  concepts.md  conf.py  index.md  quickstart.md
docs/getting_started/: advanced_builder.md  advanced_stores.md  group_builder.md  mongodb.md  query_101.md  running_builders.md  simple_builder.md  simple_drone.md  stores.md  using_file_store.md  using_ssh_tunnel.md
docs/reference/: builders.md  core_drone.md  core_store.md  core_validator.md  stores.md
docs/usage/: introduction.rst
examples/: runner_sample.py
examples/tests/: test_copybuilder.py
getting_started/advanced_builder/: index.html
getting_started/advanced_stores/: index.html
getting_started/group_builder/: index.html
getting_started/map_builder/: index.html
getting_started/mongodb/: index.html
getting_started/query_101/: index.html
getting_started/running_builders/: index.html
getting_started/simple_builder/: index.html
getting_started/simple_drone/: index.html
getting_started/stores/: index.html
getting_started/using_file_store/: index.html
getting_started/using_ssh_tunnel/: index.html
maggma/: __init__.py  advanced_stores.py  builder.py  builders.py  endpoint_cluster.py  helpers.py  main.py  runner.py  schema.py  stores.py  utils.py  validator.py  validators.py
maggma/cli/: __init__.py  mrun.py  multiprocessing.py  serial.py  test_mrun.py  utils.py
maggma/cli/tests/: test_init.py  test_mrun.py  test_multiprocessing.py  test_serial.py
maggma/core/: __init__.py  builder.py  store.py  validator.py
maggma/examples/: builders.py  cluster_manager_sample.py  materials_endpoint.py  materials_endpoint_sample.py  models.py  runner_sample.py
maggma/examples/data/: more_mats.json
maggma/examples/materials/: materials_endpoint.py  models.py
maggma/examples/tests/: test_copybuilder.py
maggma/lava/: __init__.py  diff.py  report.py  util.py  validate.py
maggma/lava/tests/: test_diff.py  test_util.py  test_validate.py
maggma/stores/: __init__.py  advanced_stores.py  aws.py  compound_stores.py  gridfs.py  mongolike.py
maggma/stores/tests/: conftest.py  test_advanced_stores.py  test_aws.py  test_compound_stores.py  test_gridfs.py  test_mongolike.py
maggma/tests/: models.py  mpi_test.py  test_advanced_stores.py  test_builders.py  test_endpoint_cluster.py  test_runner.py  test_schema.py  test_stores.py  test_utils.py  test_validator.py
quickstart/: index.html
reference/builders/: index.html
reference/core_builder/: index.html
reference/core_drone/: index.html
reference/core_store/: index.html
reference/core_validator/: index.html
reference/stores/: index.html
requirements/: macos-latest_py3.10.txt  macos-latest_py3.10_extras.txt  macos-latest_py3.11.txt  macos-latest_py3.11_extras.txt  macos-latest_py3.12.txt  macos-latest_py3.12_extras.txt  macos-latest_py3.13.txt  macos-latest_py3.13_extras.txt  macos-latest_py3.14.txt  macos-latest_py3.14_extras.txt  macos-latest_py3.8.txt  macos-latest_py3.8_extras.txt  macos-latest_py3.9.txt  macos-latest_py3.9_extras.txt  ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.13.txt  ubuntu-latest_py3.13_extras.txt  ubuntu-latest_py3.14.txt  ubuntu-latest_py3.14_extras.txt  ubuntu-latest_py3.8.txt  ubuntu-latest_py3.8_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt
scripts/: mgvv
search/: search_index.json
source/: index.rst
source/apidoc/: index.rst
source/usage/: installation.rst  quickstart.rst
src/docs/: concepts.md  conf.py  index.md
src/docs/apidoc/: index.rst
src/docs/getting_started/: advanced_builder.md  map_builder.md  running_builders.md  simple_builder.md  simple_drone.md  stores.md
src/docs/reference/: builders.md  core_builder.md  core_drone.md  stores.md
src/docs/usage/: installation.rst  introduction.rst  quickstart.rst
src/maggma/: __init__.py  builders.py  utils.py  validators.py
src/maggma/api/: API.py  APIManager.py  README.md  __init__.py  cluster_manager.py  endpoint_cluster.py  models.py  mongo_query_mapping.py  query_operator.py  resource.py  temp.py  temp_main.py  util.py  utils.py
src/maggma/builders/: __init__.py  (+4 more)
test_files/settings_files/: db.json
test_files/test_set/: a.json  b.json
tests/: conftest.py  test_builders.py  test_endpoint_cluster.py  test_utils.py  test_validator.py
tests/api/: test_aggregation_resource.py  test_api.py  test_cluster_manager.py  test_deprecation.py  test_endpointcluster.py  test_post_resource.py  test_query_operators.py  test_read_resource.py  test_resource.py  test_s3_url_resource.py  test_submission_resource.py  test_utils.py
tests/builders/: simple_bib_drone.py  test_copy_builder.py  test_group_builder.py  test_projection_builder.py  test_simple_bib_drone.py
tests/cli/: builder_for_test.py  builder_notebook_for_test.ipynb  test_distributed.py  test_init.py  test_multiprocessing.py  test_serial.py
tests/drones/: simple_bib_drone.py  test_simple_bib_drone.py
tests/stores/: test_advanced_stores.py  test_aws.py  test_azure.py  test_compound_stores.py  test_file_store.py  test_gridfs.py  test_mongolike.py  test_open_data.py  test_shared_stores.py  test_ssh_tunnel.py
usage/: installation.html  quickstart.html
(+68 files in other folders)
